# ESP32-C3-handheld

./: .gitignore  CMakeLists.txt  README.md  README_ZH.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
docs/: chip_power_save_design.md  power_save_design.md
main/: CMakeLists.txt  audio.c  audio.h  chip_power.c  chip_power.h  font_alipuhui.c  idf_component.yml  lvgl_demo_ui.c  main.h  power_mgmt.c  power_mgmt.h  spi_lcd_touch_example_main.c  weather_app.c  weather_app.h  weather_secrets.example.h  weather_service.c  weather_service.h
main/assets/: font_alipuhui20.c  image_att_icon.c  image_comp_icon.c  image_mic_icon.c  image_set_icon.c  image_spr_icon.c  image_th_icon.c
